--- a/projects.json
+++ b/projects.json
@@ -5,42 +5,66 @@
             "description": "פרויקט שלי: גלריית תמונות רספונסיבית עם כיתוב משעשע",
             "image": "img/candle.png",
             "path": "candle/index.html",
-            "zip": "candle.zip"
+            "zip": "candle.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         },
         {
             "title": "גופנים מגניבים",
             "description": "פרויקט שלי: התנסו בגופנים שונים, חלקם אני יצרתי וחלקם מגוגל פונטס",
             "image": "img/fonts.png",
             "path": "typography/index.html",
-            "zip": "typography.zip"
+            "zip": "typography.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         },
         {
             "title": "קפה",
             "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
             "image": "img/coffee.png",
             "path": "Coffee/index.html",
-            "zip": "Coffee.zip"
+            "zip": "Coffee.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         },
         {
             "title": "גריד",
             "description": "עמוד להשארת פרטים (שם מלא, אימייל והודעת טקסט)",
             "image": "img/grid.png",
             "path": "gallery/index.html",
-            "zip": "gallery.zip"
+            "zip": "gallery.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         },
         {
             "title": "הדרך קדימה",
             "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
             "image": "img/forward.png",
             "path": "forward/index.html",
-            "zip": "forward.zip"
+            "zip": "forward.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         },
         {
             "title": "דף נחיתה צהוב",
             "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
             "image": "img/yellow.png",
             "path": "icons page/index.html",
-            "zip": "icons page.zip"
+            "zip": "icons page.zip",
+            "languages": [
+                "HTML",
+                "CSS"
+            ]
         }
     ]
 }
