--- a/projects.json
+++ b/projects.json
@@ -2,8 +2,8 @@
     "projects": [
         {
             "title": "מצב הרוח כנר",
-            "description": "פרויקט שלי: גלריית תמונות רספונסיבית עם כיתוב משעשע",
-            "image": "img/candle.png",
+            "description": "גלריית תמונות רספונסיבית עם אפקטים ייחודיים וכיתוב משעשע, המאפשרת חווית צפייה קלילה ומהנה. נבנה בעזרת HTML ו-CSS, מתאים לכל סוגי המסכים.",
+            "image": "img/candle.webp",
             "path": "candle/index.html",
             "zip": "candle.zip",
             "languages": [
@@ -13,8 +13,8 @@
         },
         {
             "title": "גופנים מגניבים",
-            "description": "פרויקט שלי: התנסו בגופנים שונים, חלקם אני יצרתי וחלקם מגוגל פונטס",
-            "image": "img/fonts.png",
+            "description": "התנסו במבחר גופנים ייחודיים - חלקם בעיצוב אישי וחלקם מ-Google Fonts. פרויקט המדגיש את עוצמת הטיפוגרפיה באמצעות HTML ו-CSS בלבד. מותאם לתצוגה במכשירים ניידים.",
+            "image": "img/fonts.webp",
             "path": "typography/index.html",
             "zip": "typography.zip",
             "languages": [
@@ -24,46 +24,50 @@
         },
         {
             "title": "קפה",
-            "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
-            "image": "img/coffee.png",
+            "description": "דף השארת פרטים ידידותי למשתמש, שנבנה ב-HTML ו-CSS עם יישום עיצוב מקבצי Adobe XD. מותאם לתצוגה בנייד ובמחשב.",
+            "image": "img/coffee.webp",
             "path": "Coffee/index.html",
             "zip": "Coffee.zip",
             "languages": [
                 "HTML",
-                "CSS"
+                "CSS",
+                "Adobe XD"
             ]
         },
         {
             "title": "גריד",
-            "description": "עמוד להשארת פרטים (שם מלא, אימייל והודעת טקסט)",
-            "image": "img/grid.png",
+            "description": "עמוד גריד מודרני לאיסוף פרטים עם שדות נוספים, כולל שם, אימייל והודעת טקסט. נבנה בעזרת HTML ו-CSS עם יישום של עיצוב שהוכן מראש ב-Adobe XD. מותאם לניידים ולמחשבים.",
+            "image": "img/grid.webp",
             "path": "gallery/index.html",
             "zip": "gallery.zip",
             "languages": [
                 "HTML",
-                "CSS"
+                "CSS",
+                "Adobe XD"
             ]
         },
         {
             "title": "הדרך קדימה",
-            "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
-            "image": "img/forward.png",
+            "description": "עמוד מרשים להשארת פרטים, המותאם למגוון מסכים. נבנה ב-HTML ו-CSS עם יישום של עיצוב מקובץ Adobe XD קיים.",
+            "image": "img/forward.webp",
             "path": "forward/index.html",
             "zip": "forward.zip",
             "languages": [
                 "HTML",
-                "CSS"
+                "CSS",
+                "Adobe XD"
             ]
         },
         {
             "title": "דף נחיתה צהוב",
-            "description": "עמוד להשארת פרטים (שם מלא ואימייל)",
-            "image": "img/yellow.png",
+            "description": "דף נחיתה בולט עם רקע צהוב ועיצוב נוח לשימוש. נבנה ב-HTML ו-CSS בהתבסס על עיצוב שהוכן מראש ב-Adobe XD, ומותאם לנייד ולמחשב.",
+            "image": "img/yellow.webp",
             "path": "icons page/index.html",
             "zip": "icons page.zip",
             "languages": [
                 "HTML",
-                "CSS"
+                "CSS",
+                "Adobe XD"
             ]
         }
     ]
